@@ -459,7 +459,7 @@ public class EnterListDialog extends Dialog
 		wListDest.removeAll();
 		for (int i=0;i<input.length;i++)
 		{
-			Integer idx = new Integer(i);
+			Integer idx = Integer.valueOf(i);
 			String str = selection.get(idx);
 			if (str==null) // Not selected: show in source!
 			{
@@ -485,7 +485,7 @@ public class EnterListDialog extends Dialog
 	public void addToDestination(String string)
 	{
 		int idxInput = Const.indexOfString(string, input);
-		selection.put(new Integer(idxInput), string);
+		selection.put(Integer.valueOf(idxInput), string);
 		
 		getData();
 	}
@@ -493,7 +493,7 @@ public class EnterListDialog extends Dialog
 	public void delFromDestination(String string)
 	{
 		int idxInput = Const.indexOfString(string, input);
-		selection.remove(new Integer(idxInput));
+		selection.remove(Integer.valueOf(idxInput));
 		
 		getData();
 	}
