@@ -418,7 +418,7 @@ public class RipDatabaseWizardPage2 extends WizardPage
 		{
 			for (int i=0;i<input.length;i++)
 			{
-				Integer idx = new Integer(i);
+				Integer idx = Integer.valueOf(i);
 				String str = selection.get(idx);
 				if (str==null) // Not selected: show in source!
 				{
@@ -444,7 +444,7 @@ public class RipDatabaseWizardPage2 extends WizardPage
 		for (int i=0;i<input.length;i++) 
 		{
 			wListDest.add(input[i]);
-			selection.put(new Integer(i), input[i]);
+			selection.put(Integer.valueOf(i), input[i]);
 		}
 		
 		setPageComplete(canFlipToNextPage());
@@ -480,7 +480,7 @@ public class RipDatabaseWizardPage2 extends WizardPage
 	public void addToDestination(String string)
 	{
 		int idxInput = Const.indexOfString(string, input);
-		selection.put(new Integer(idxInput), string);
+		selection.put(Integer.valueOf(idxInput), string);
 		
 		getData();
 	}
@@ -488,7 +488,7 @@ public class RipDatabaseWizardPage2 extends WizardPage
 	public void delFromDestination(String string)
 	{
 		int idxInput = Const.indexOfString(string, input);
-		selection.remove(new Integer(idxInput));
+		selection.remove(Integer.valueOf(idxInput));
 		
 		getData();
 	}
