@@ -206,7 +206,7 @@ public class CalculatorDialog extends BaseStepDialog implements StepDialogInterf
                         // Remember these fields...
                         for (int i=0;i<row.size();i++)
                         {
-                            inputFields.put(row.getValueMeta(i).getName(), new Integer(i));
+                            inputFields.put(row.getValueMeta(i).getName(), Integer.valueOf(i));
                         }
                         
                         setComboBoxes();
@@ -294,7 +294,7 @@ public class CalculatorDialog extends BaseStepDialog implements StepDialogInterf
                     for (int i=0;i<nrNonEmptyFields;i++)
                     {
                         TableItem item = wFields.getNonEmpty(i);
-                        fields.put(item.getText(1), new Integer(1000000+i));  // The number is just to debug the origin of the fieldname
+                        fields.put(item.getText(1), Integer.valueOf(1000000+i));  // The number is just to debug the origin of the fieldname
                     }
                 }
             }
