@@ -289,7 +289,7 @@ class ScriptValuesHighlight implements LineStyleListener {
 		 */
 		void initialize() {
 			fgKeys= new Hashtable<String, Integer>();
-			Integer k= new Integer(KEY);
+			Integer k = Integer.valueOf(KEY);
 			for (int i= 0; i < fgKeywords.length; i++)
 				fgKeys.put(fgKeywords[i], k);
 		}
@@ -300,7 +300,7 @@ class ScriptValuesHighlight implements LineStyleListener {
 		
 		void initializeETLFunctions(){
 			kfKeys = new Hashtable<String, Integer>();
-			Integer k = new Integer(FUNCTIONS);
+			Integer k = Integer.valueOf(FUNCTIONS);
 			for (int i= 0; i < kfKeywords.length; i++)
 				kfKeys.put(kfKeywords[i], k);
 		}
